<resources>
    <string name="app_name">ECollect</string>
    <string name="password">Password</string>
    <string name="onboarding_bg">oboarding_bg\n</string>
    <string name="onboarding_stxt">Your Go-To Solution for Waste Collection Schedules!</string>
    <string name="get_started">Get Started</string>
    <string name="button_getstarted">Button</string>
    <string name="chooselogin">TODO</string>
    <string name="ecollecttext_logo">TODO</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login_img">TODO</string>
    <string name="button_login">Button</string>
    <string name="button_userlogin">User Login</string>
    <string name="button_adminlogin">Admin Login</string>
    <string name="text_register">Don’t have an account?</string>
    <string name="button_sregister">Register</string>
    <string name="userlogin_bg">TODO</string>
    <string name="welcomeuser_txt">Welcome to</string>
    <string name="ecollect_logo">TODO</string>
    <string name="text_login">Log in</string>
    <string name="user_textregister">Don’t have an account?</string>
    <string name="userlogin_img">TODO</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="onboarding_haveacctxt">Already have an account?</string>
    <string name="log_insmall">Log in</string>
    <string name="adminlogin_bg">TODO</string>
    <string name="adminlogin_logo">TODO</string>
    <string name="adminlogin_img">TODO</string>
    <string name="admin_text">Admin</string>
    <string name="admin_noaccounttxt">Don’t have an account?</string>
    <string name="registration_bg">TODO</string>
    <string name="reg_ecollectlogo">TODO</string>
    <string name="fags_bg">TODO</string>
    <string name="faqs_headertxt">Frequently Asked Questions</string>
    <string name="title_activity_faqs">Faqs</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userlogin_emailadd">Email Address</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="faqs_bg">TODO</string>
    <string name="text_faqs">Frequently Asked Questions</string>
    <string name="email_address">Email Address</string>
    <string name="adminemail_address">Email Address</string>
    <string name="dashboard_bg">TODO</string>
    <string name="dashboardbg">TODO</string>
    <string name="truck">truck</string>
    <string name="schedule_calendar">Schedule Calendar</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashb_bg">TODO</string>
    <string name="recyclable_buttontxt">Recyclable Material Information Panel</string>
    <string name="wastepanel_button">Waste Segregation Guide Panel</string>
    <string name="navbar">TODO</string>
    <string name="homeButton">TODO</string>
    <string name="newsButton">TODO</string>
    <string name="searchButton">TODO</string>
    <string name="profiButton">TODO</string>
    <string name="navbarbg">TODO</string>
    <string name="faqsbackButton">TODO</string>
    <string name="direc_bg">direc_bg</string>
    <string name="annoucements">ANNOUCEMENTS</string>
    <string name="announce1">TODO</string>
    <string name="announcetext1">“No Collection on Tuesday, February 4, 2025 due to San Juan Festival”</string>
    <string name="announcetext2">NO SEGREGATION, NO COLLECTION POLICY TO BE STRICTLY IMPLEMENTED</string>
    <string name="announce3">TODO</string>
    <string name="announcetext3">NO SEGREGATION, NO COLLECTION POLICY TO BE STRICTLY IMPLEMENTED</string>
    <string name="announce2">TODO</string>
    <string name="benefit">Benefit</string>
    <string name="how_to_recycle_plastic">How to Recycle Plastic</string>
    <string name="check1">– Check: Find the recycling symbol (1–7) on the plastic.</string>
    <string name="clean1">- Clean: Rinse off food or liquids.</string>
    <string name="sort1">- Sort: Group by type if needed.</string>
    <string name="dispose1">- Dispose: Use recycling bins or centers.</string>
    <string name="benefit1">Benefit</string>
    <string name="_1_environmental_impact">1. Environmental Impact</string>
    <string name="answer1">Recycling plastic reduces pollution, conserves resources, and lowers greenhouse gas emissions by reusing materials instead of producing new plastic.</string>
    <string name="_2_economic_efficiency">2. Economic Efficiency</string>
    <string name="answer2">It saves costs, creates jobs in recycling industries, and supports a circular economy by turning waste into valuable resources.</string>
    <string name="plastic_img">TODO</string>
    <string name="yellow_container">Yellow container</string>
    <string name="how_to_recycle_paper">How to Recycle Paper</string>
    <string name="sort_separate_clean_dry_paper_from_trash">- Sort: Separate clean, dry paper from trash.</string>
    <string name="remove_take_out_staples_tape_or_plastic">- Remove: Take out staples, tape, or plastic.</string>
    <string name="flatten_break_down_boxes_to_save_space">- Flatten: Break down boxes to save space.</string>
    <string name="recycle_place_in_bins_or_drop_at_centers_avoid_wet_greasy_or_laminated_paper">- Recycle: Place in bins or drop at centers. Avoid wet, greasy, or laminated paper.</string>
    <string name="blue_container">Blue Container</string>
    <string name="residual">Residual</string>
    <string name="residual_items_header">Residual Items Header</string>
    <string name="back_arrow">Back</string>
</resources>