<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_residual"
    android:contentDescription="@string/residual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_residual_panel"
    tools:context=".ItemResidualPanel">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/back_arrow"
        android:background="@null"
        android:scaleType="fitCenter"
        android:foreground="@null"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="315dp"
        android:layout_marginTop="75dp"/>

    <!-- Items -->
    <TextView
        android:id="@+id/text_view_residual"
        android:layout_width="0dp"
        android:layout_height="310dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="55dp"
        android:gravity="start"
        android:lineSpacingExtra="9dp"
        android:textColor="@android:color/black"
        android:contentDescription="@string/residual_items_header"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>